--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,10 +1,10 @@
 name: podcast_finder
 description: A Flutter project to evaluate mobile developers
-publish_to: 'none'
+publish_to: "none"
 version: 1.0.0+1
 
 environment:
-  sdk: '>=3.8.0 <4.0.0'
+  sdk: ">=3.8.0 <4.0.0"
 
 dependencies:
   flutter:
@@ -14,21 +14,21 @@ dependencies:
   flutter_riverpod: ^2.6.1
 
   # Networking
-  dio: ^5.7.0
+  dio: ^5.9.0
 
   # Code Generation (solo para json_serializable)
   json_annotation: ^4.9.0
   freezed_annotation: ^3.1.0
 
   # Routing
-  go_router: ^14.6.2
+  go_router: ^17.0.1
 
   # UI
   cached_network_image: ^3.4.1
   shimmer: ^3.0.0
 
   # Utils
-  intl: ^0.19.0
+  intl: ^0.20.2
 
 dev_dependencies:
   flutter_test:
@@ -36,14 +36,14 @@ dev_dependencies:
 
   # Code generation
   build_runner: ^2.10.4
-  json_serializable: ^6.8.0
+  json_serializable: ^6.11.2
   freezed: ^3.2.3
 
   # Testing
   mocktail: ^1.0.4
 
   # Linting
-  flutter_lints: ^5.0.0
+  flutter_lints: ^6.0.0
 
 flutter:
   uses-material-design: true
