--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,9 @@ dependencies:
   # Networking
   dio: ^5.9.0
 
+  # Dio Interceptors
+  dio_http_formatter: ^3.3.1
+
   # Code Generation (solo para json_serializable)
   json_annotation: ^4.9.0
   freezed_annotation: ^3.1.0
@@ -29,6 +32,9 @@ dependencies:
 
   # Utils
   intl: ^0.20.2
+
+  # Equatable for value comparison
+  equatable: ^2.0.7
 
 dev_dependencies:
   flutter_test:
