--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,7 @@ dependencies:
   # Dio Interceptors
   dio_http_formatter: ^3.3.1
 
-  # Code Generation (solo para json_serializable)
+  # Code Generation
   json_annotation: ^4.9.0
   freezed_annotation: ^3.1.0
 
@@ -35,9 +35,6 @@ dependencies:
 
   # Equatable for value comparison
   equatable: ^2.0.8
-
-  # Functional Programming
-  fpdart: ^1.2.0
 
 dev_dependencies:
   flutter_test:
